class House {
    constructor(type, adress, landlord, squarementers) {
        this.type = type
        this.adress = adress
        this.landlord = landlord
        this.squaremeters = squarementers
    }
}

module.exports = House